--- a/package.json
+++ b/package.json
@@ -17,11 +17,15 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "lucide-react": "^0.424.0",
+    "mongodb": "^6.8.0",
+    "mongoose": "^8.5.2",
     "next": "14.2.5",
+    "query-string": "^9.1.0",
     "react": "^18",
     "react-countup": "^6.5.3",
     "react-dom": "^18",
     "react-icons": "^5.2.1",
+    "svix": "^1.28.0",
     "tailwind-merge": "^2.4.0",
     "tailwindcss-animate": "^1.0.7",
     "uploadthing": "^6.13.2"
